--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <!-- Section 1: Course Introduction -->
       <div class="about-section">
         <div class="section-image">
-          <div class="image-placeholder"></div>
+          <div class="image-placeholder">
+            <img src="/images/img-1.jpg" alt="Course intro" />
+          </div>
         </div>
         <div class="section-text">
           <h1 class="about-header">hi, i'm jingkai</h1>
@@ -48,7 +50,9 @@
       <!-- Section 2: About Me -->
       <div class="about-section">
         <div class="section-image">
-          <div class="image-placeholder"></div>
+          <div class="image-placeholder">
+            <img src="/images/img-2.jpg" alt="About me" />
+          </div>
         </div>
         <div class="section-text">
           <h2 class="about-subheader">about me</h2>
