improvements to UI

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>room</title>
+  <title>Welcome to Jing Kai's Room!</title>
 </head>
 
 <body>
@@ -444,6 +444,34 @@
         <li><span class="cheatsheet-item">Television</span> <span class="cheatsheet-arrow">&rarr;</span> <span
             class="cheatsheet-dest">Security + Borders Reflection</span></li>
       </ul>
+    </div>
+  </div>
+
+  <!-- Welcome Overlay (shown once on enter) -->
+  <div id="welcome-overlay">
+    <div class="welcome-card">
+      <span class="welcome-diamond">&#9670;</span>
+      <h2 class="welcome-title">welcome</h2>
+      <div class="welcome-divider"></div>
+      <div class="welcome-hints">
+        <div class="welcome-hint-row">
+          <span class="welcome-hint-icon">drag</span>
+          <span class="welcome-arrow">&rarr;</span>
+          <span class="welcome-hint-label">rotate the scene</span>
+        </div>
+        <div class="welcome-hint-row">
+          <span class="welcome-hint-icon">hover</span>
+          <span class="welcome-arrow">&rarr;</span>
+          <span class="welcome-hint-label">discover objects</span>
+        </div>
+        <div class="welcome-hint-row">
+          <span class="welcome-hint-icon">click</span>
+          <span class="welcome-arrow">&rarr;</span>
+          <span class="welcome-hint-label">explore stories</span>
+        </div>
+      </div>
+      <div class="welcome-divider"></div>
+      <span class="welcome-dismiss">tap anywhere to begin</span>
     </div>
   </div>
 
