improved the loading experience

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <div class="loader-content">
       <span class="loading-message">loading...</span>
 
+      <div class="progress-wrapper">
+        <div id="progress-bar-container">
+          <div id="progress-bar-fill"></div>
+        </div>
+        <span id="progress-text" class="progress-text">0%</span>
+      </div>
+
       <!-- Motivation block (starts invisible, transitions in after load) -->
       <div class="loader-motivation">
         <span class="loader-diamond">&#9670;</span>
