--- a/index.html
+++ b/index.html
@@ -429,6 +429,20 @@
     </div>
   </div>
 
+  <!-- Nav Bubble + Sidebar -->
+  <button id="nav-btn" class="hidden">&#9776;</button>
+
+  <div id="nav-sidebar">
+    <nav class="nav-list">
+      <button class="nav-item" data-panel="about">about me</button>
+      <button class="nav-item" data-panel="map">map</button>
+      <button class="nav-item" data-panel="podcast">podcast</button>
+      <button class="nav-item" data-panel="leaderboard">film leaderboard</button>
+      <button class="nav-item" data-panel="reflection">sovereignty &amp; diplomacy</button>
+      <button class="nav-item" data-panel="tv">security &amp; borders</button>
+    </nav>
+  </div>
+
   <!-- Help Button -->
   <button id="help-btn">?</button>
 
